working from command line: java -jar SoftwareUpdateTool.jar applicationdata